--- a/src/geoip/tsconfig.json
+++ b/src/geoip/tsconfig.json
@@ -5,12 +5,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noImplicitAny": false,
-    "baseUrl": "./src",
-    "paths": {
-      "@shared/*": [
-        "../shared/*"
-      ]
-    }
+    "baseUrl": "./src"
   },
   "include": [
     "src/**/*",
