--- a/src/geoip/package.json
+++ b/src/geoip/package.json
@@ -4,36 +4,24 @@
   "main": "./src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "@webalytic/ms-tools": "^0.0.12",
-    "@webalytic/protorepo": "webalytic/protorepo#0.2.6",
+    "@webalytic/ms-tools": "^0.1.6",
     "dotenv": "^8.2.0",
-    "google-protobuf": "^3.12.4",
     "grpc": "^1.24.3",
-    "grpc-tools": "^1.9.1",
     "maxmind": "^4.1.4",
-    "rimraf": "^3.0.2",
-    "shelljs": "^0.8.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   },
   "devDependencies": {
-    "@types/google-protobuf": "^3.7.2",
-    "@types/rimraf": "^3.0.0",
-    "@types/shelljs": "^0.8.8",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-es5": "^1.5.0",
-    "eslint-plugin-import": "^2.22.0",
-    "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.2"
+    "eslint-plugin-import": "^2.22.0"
   },
   "scripts": {
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
-    "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
-    "ts-check": "tsc -p ./tsconfig.json --noEmit",
-    "postinstall": "npm run build"
+    "ts-check": "tsc -p ./tsconfig.json --noEmit"
   }
 }
