--- a/src/log-collector/tsconfig.json
+++ b/src/log-collector/tsconfig.json
@@ -6,12 +6,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
-    "baseUrl": "./src",
-    "paths": {
-      "@shared/*": [
-        "../shared/*"
-      ]
-    }
+    "baseUrl": "./src"
   },
   "include": [
     "src/**/*",
