--- a/src/log-collector/package.json
+++ b/src/log-collector/package.json
@@ -4,10 +4,12 @@
   "main": "./src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "@webalytic/ms-tools": "^0.1.6",
+    "@webalytic/ms-tools": "^0.1.8",
     "awilix": "^4.2.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fastest-validator": "^1.6.1",
+    "grpc": "^1.24.3",
     "moment": "^2.27.0",
     "request-ip": "^2.1.3",
     "ts-node": "^8.10.2",
@@ -17,12 +19,12 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/uglify-js": "^3.9.3",
     "@types/chai": "^4.2.12",
     "@types/faker": "^4.1.12",
     "@types/mocha": "^7.0.2",
     "@types/request-ip": "^0.0.35",
     "@types/supertest": "^2.0.10",
+    "@types/uglify-js": "^3.9.3",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "chai": "^4.2.0",
@@ -41,6 +43,6 @@
     "lint": "eslint --ext .js,.ts ./",
     "ts-check": "tsc --project ./tsconfig.json --noEmit",
     "test": "npm run test:integration",
-    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 120000 -b ./test/index.ts"
+    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts"
   }
 }
