add grapqhl for resources

--- a/deploy/docker-compose/.env
+++ b/deploy/docker-compose/.env
@@ -33,3 +33,6 @@ API_GATEWAY_URL=http://api-gateway:3000
 
 GEOIP_HOST=geoip
 GEOIP_PORT=50051
+
+CONFIGURATION_HOST=configuration
+CONFIGURATION_PORT=50051
