--- a/src/api-gateway/package.json
+++ b/src/api-gateway/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql-type-json": "^0.3.2",
+    "grpc": "^1.24.3",
     "lodash": "^4.17.19",
+    "long": "^4.0.0",
     "moment": "^2.27.0",
     "nock": "^13.0.3",
     "request-ip": "^2.1.3",
@@ -23,6 +25,8 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.17.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.12",
     "@types/faker": "^4.1.12",
@@ -37,13 +41,14 @@
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.22.0",
     "faker": "^4.1.0",
+    "grpc": "^1.24.3",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "supertest": "^4.0.2"
   },
   "scripts": {
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
-    "build": "echo 'build'",
+    "build": "graphql-codegen",
     "test": "npm run test:integration",
     "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 120000 -b ./test/index.ts",
     "lint": "eslint --ext .js,.ts ./",
