--- a/src/log-collector/package.json
+++ b/src/log-collector/package.json
@@ -4,16 +4,14 @@
   "main": "./src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "@webalytic/ms-tools": "^0.0.12",
-    "@webalytic/protorepo": "webalytic/protorepo#0.2.6",
+    "@webalytic/ms-tools": "^0.1.8",
     "awilix": "^4.2.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fastest-validator": "^1.6.1",
+    "grpc": "^1.24.3",
     "moment": "^2.27.0",
-    "protobufjs": "^6.10.1",
     "request-ip": "^2.1.3",
-    "rimraf": "^3.0.2",
-    "shelljs": "^0.8.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
     "uglify-js": "^3.10.1",
@@ -21,14 +19,12 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/uglify-js": "^3.9.3",
     "@types/chai": "^4.2.12",
     "@types/faker": "^4.1.12",
     "@types/mocha": "^7.0.2",
     "@types/request-ip": "^0.0.35",
-    "@types/rimraf": "^3.0.0",
-    "@types/shelljs": "^0.8.8",
     "@types/supertest": "^2.0.10",
+    "@types/uglify-js": "^3.9.3",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "chai": "^4.2.0",
@@ -37,8 +33,6 @@
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.22.0",
     "faker": "^4.1.0",
-    "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.2",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "supertest": "^4.0.2",
@@ -46,11 +40,9 @@
   },
   "scripts": {
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
-    "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
     "ts-check": "tsc --project ./tsconfig.json --noEmit",
     "test": "npm run test:integration",
-    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 120000 -b ./test/index.ts",
-    "postinstall": "npm run build"
+    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts"
   }
 }
