--- a/src/log-processing/package.json
+++ b/src/log-processing/package.json
@@ -4,20 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@grpc/proto-loader": "^0.5.5",
-    "@types/node": "^14.0.27",
-    "@types/protobufjs": "^6.0.0",
-    "@types/ua-parser-js": "^0.7.33",
-    "@types/uuid": "^8.0.0",
-    "@webalytic/ms-tools": "^0.0.12",
-    "@webalytic/protorepo": "webalytic/protorepo#0.2.6",
+    "@webalytic/ms-tools": "^0.1.8",
     "awilix": "^4.2.6",
-    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "fastest-validator": "^1.6.0",
-    "grpc": "^1.24.3",
     "moment": "^2.27.0",
-    "protobufjs": "^6.10.1",
     "request-ip": "^2.1.3",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
@@ -28,10 +19,12 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/node": "^14.0.27",
+    "@types/ua-parser-js": "^0.7.33",
+    "@types/uuid": "^8.0.0",
     "@types/chai": "^4.2.12",
     "@types/faker": "^4.1.12",
     "@types/mocha": "^7.0.2",
-    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "chai": "^4.2.0",
@@ -40,23 +33,15 @@
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.22.0",
     "faker": "^4.1.0",
-    "google-protobuf": "^3.12.4",
-    "graphql-type-json": "^0.3.2",
-    "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.2",
     "mocha": "^8.0.1",
-    "nyc": "^15.1.0",
-    "supertest": "^4.0.2"
+    "nyc": "^15.1.0"
   },
   "scripts": {
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
-    "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
     "ts-check": "tsc --project ./tsconfig.json --noEmit",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 ./src/**/*.test.ts",
-    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts",
-    "coverage": "nyc npm run test:unit",
-    "postinstall": "npm run build"
+    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts"
   }
 }
