--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -6,8 +6,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "API_URL=http://localhost:3000 webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "build": "node build/build.js"
+  },
+  "engines": {
+    "node": ">= 8.0.0",
+    "npm": ">= 3.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -19,9 +23,10 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.16.0",
     "echarts": "^4.8.0",
-    "eslint-plugin-vue": "^6.2.2",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
+    "moment": "^2.27.0",
+    "numeral": "^2.0.6",
     "vue": "^2.5.11",
     "vue-apollo": "^3.0.4",
     "vue-echarts": "^5.0.0-beta.0"
@@ -32,11 +37,24 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@babel/runtime": "^7.5.4",
+    "autoprefixer": "^9.6.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-istanbul": "^5.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "chalk": "^4.1.0",
+    "compression-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "eslint": "^6.8.0",
@@ -44,12 +62,25 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.10.0",
+    "node-notifier": "^8.0.0",
     "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "ora": "^5.0.0",
+    "rimraf": "^3.0.2",
     "sass-loader": "^6.0.6",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "~15.6",
+    "vue-style-loader": "~4.1",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.29.0",
+    "webpack-bundle-analyzer": "~3.3",
+    "webpack-cli": "~3.2",
+    "webpack-dev-server": "~3.1",
+    "webpack-hot-middleware": "~2.24",
+    "webpack-merge": "~4.2"
   }
 }
