--- a/src/dashboard/.babelrc
+++ b/src/dashboard/.babelrc
@@ -1,5 +1,13 @@
 {
   "presets": [
     "@babel/env"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
   ]
 }
