--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -30,7 +30,8 @@
     "numeral": "^2.0.6",
     "vue": "^2.5.11",
     "vue-apollo": "^3.0.4",
-    "vue-echarts": "^5.0.0-beta.0"
+    "vue-echarts": "^5.0.0-beta.0",
+    "vue2-daterange-picker": "^0.5.1"
   },
   "browserslist": [
     "> 1%",
@@ -40,11 +41,11 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-stage-0": "^7.8.3",
-    "@babel/runtime": "^7.5.4",
+    "@babel/runtime": "^7.11.2",
     "autoprefixer": "^9.6.5",
     "babel-eslint": "^10.1.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
