--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -31,6 +31,8 @@
     "vue": "^2.5.11",
     "vue-apollo": "^3.0.4",
     "vue-echarts": "^5.0.0-beta.0",
+    "vue-router": "^3.4.3",
+    "vue-tables-2": "^2.0.32",
     "vue2-daterange-picker": "^0.5.1",
     "vuex": "^3.5.1"
   },
