--- a/src/dashboard/nginx.conf
+++ b/src/dashboard/nginx.conf
@@ -27,7 +27,7 @@ http {
   server {
     listen 80;
     location / {
-      root /usr/share/nginx/html;
+      root /usr/share/nginx/html/dist;
       try_files $uri $uri/ /index.html;
     }        
   }
