--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -74,6 +74,7 @@
     "ora": "^5.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^6.0.6",
+    "shelljs": "^0.8.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "vue-loader": "~15.6",
