--- a/src/log-processing/package.json
+++ b/src/log-processing/package.json
@@ -19,12 +19,12 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/node": "^14.0.27",
-    "@types/ua-parser-js": "^0.7.33",
-    "@types/uuid": "^8.0.0",
     "@types/chai": "^4.2.12",
     "@types/faker": "^4.1.12",
     "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.27",
+    "@types/ua-parser-js": "^0.7.33",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "chai": "^4.2.0",
@@ -34,7 +34,8 @@
     "eslint-plugin-import": "^2.22.0",
     "faker": "^4.1.0",
     "mocha": "^8.0.1",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "testcontainers": "^3.4.0"
   },
   "scripts": {
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
