--- a/src/data-storage/package.json
+++ b/src/data-storage/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/faker": "^4.1.12",
+    "@types/mocha": "^8.0.3",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "chai": "^4.2.0",
