--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -28,6 +28,7 @@
     "graphql-tag": "^2.11.0",
     "moment": "^2.27.0",
     "numeral": "^2.0.6",
+    "vee-validate": "^3.3.9",
     "vue": "^2.5.11",
     "vue-apollo": "^3.0.4",
     "vue-echarts": "^5.0.0-beta.0",
