Build and push docker (#19)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,10 @@ executors:
     machine:
       image: default
 
+  buildpack: 
+    docker:
+      - image: circleci/buildpack-deps:stretch
+
 jobs:
   trigger-workflows:
     executor: node
@@ -52,6 +56,25 @@ jobs:
       - run:
           name: Trigger workflows
           command: chmod +x .circleci/circle_trigger.sh && .circleci/circle_trigger.sh
+
+  build-docker:
+    parameters:
+      package_name:
+        type: string
+    executor: buildpack
+    working_directory: ~/project/src/<< parameters.package_name >>
+    steps:
+      - attach_workspace:
+          at: ~/
+      - setup_remote_docker
+      - run:
+          name: Build Docker image
+          command: docker build -t webalytic/<< parameters.package_name >>:latest .
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push webalytic/<< parameters.package_name >>:latest
 
   build:
     executor: node
@@ -152,6 +175,14 @@ workflows:
           requires:
             - log-processing-typescript
             - log-processing-lint
+      - build-docker:
+          name: log-processing-build-docker
+          package_name: log-processing
+          requires:
+            - log-processing-test
+          filters:
+            branches:
+              only: master
 
   log-collector:
     when: << pipeline.parameters.log-collector >>
@@ -175,6 +206,14 @@ workflows:
           requires:
             - log-collector-typescript
             - log-collector-lint
+      - build-docker:
+          name: log-collector-build-docker
+          package_name: log-collector
+          requires:
+            - log-collector-test
+          filters:
+            branches:
+              only: master
 
   api-gateway:
     when: << pipeline.parameters.api-gateway >>
@@ -198,6 +237,14 @@ workflows:
           requires:
             - api-gateway-typescript
             - api-gateway-lint
+      - build-docker:
+          name: api-gateway-build-docker
+          package_name: api-gateway
+          requires:
+            - api-gateway-test
+          filters:
+            branches:
+              only: master
 
   configuration:
     when: << pipeline.parameters.configuration >>
@@ -221,6 +268,14 @@ workflows:
           requires:
             - configuration-typescript
             - configuration-lint
+      - build-docker:
+          name: configuration-build-docker
+          package_name: configuration
+          requires:
+            - configuration-test
+          filters:
+            branches:
+              only: master
   
   data-storage:
     when: << pipeline.parameters.data-storage >>
@@ -244,6 +299,14 @@ workflows:
           requires:
             - data-storage-typescript
             - data-storage-lint
+      - build-docker:
+          name: data-storage-docker
+          package_name: data-storage
+          requires:
+            - data-storage-test
+          filters:
+            branches:
+              only: master
 
   dashboard:
     when: << pipeline.parameters.dashboard >>
@@ -256,3 +319,11 @@ workflows:
           package_name: dashboard
           requires:
             - dashboard-build
+      - build-docker:
+          name: dashboard-docker
+          package_name: dashboard
+          requires:
+            - dashboard-lint
+          filters:
+            branches:
+              only: master
