--- a/src/log-processing/package.json
+++ b/src/log-processing/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@webalytic/ms-tools": "^0.2.3",
+    "@webalytic/ms-tools": "^0.2.4",
     "awilix": "^4.2.6",
     "dotenv": "^8.2.0",
     "fastest-validator": "^1.6.0",
@@ -33,6 +33,7 @@
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.22.0",
     "faker": "^4.1.0",
+    "grpc": "^1.24.3",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "testcontainers": "^3.4.0"
